--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,21 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
   <meta name="apple-mobile-web-app-title" content="exercise_4">
+
+  <meta name="apple-mobile-web-app-title" content="cc206_technodeskworks">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+
   <title>exercise_4</title>
+
+  <title>cc206_technodeskworks</title>
+
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
