Exercise 4 Cabantug, Maquiran, Nacis

--- a/web/index.html
+++ b/web/index.html
@@ -25,11 +25,17 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
+
   <meta name="apple-mobile-web-app-title" content="exercise_4">
 
   <meta name="apple-mobile-web-app-title" content="cc206_technodeskworks">
 
   <meta name="apple-mobile-web-app-title" content="exercisce_unit4">
+
+
+  <meta name="apple-mobile-web-app-title" content="exercisce_unit4">
+
+  <meta name="apple-mobile-web-app-title" content="exercise_4">
 
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
@@ -44,6 +50,11 @@
 
 
   <title>exercisce_unit4</title>
+
+
+  <title>exercisce_unit4</title>
+
+  <title>exercise_4</title>
 
   <link rel="manifest" href="manifest.json">
 </head>
