--- a/web/index.html
+++ b/web/index.html
@@ -24,9 +24,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+
   <meta name="apple-mobile-web-app-title" content="exercise_4">
 
   <meta name="apple-mobile-web-app-title" content="cc206_technodeskworks">
+
+  <meta name="apple-mobile-web-app-title" content="exercisce_unit4">
 
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
@@ -34,9 +37,13 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
 
+
   <title>exercise_4</title>
 
   <title>cc206_technodeskworks</title>
+
+
+  <title>exercisce_unit4</title>
 
   <link rel="manifest" href="manifest.json">
 </head>
